# performance_engineering_ai

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
docs/: performance_eng_ai
src/section2/s0/: p1.py  p1_profile.md  trace.json
src/section2/s1/: bad.py  description.md  good.py  profiler.py
src/section2/s1/profile/: bad_output.txt
src/section2/s2/: bad.py  bad_profile.py  good.py
src/section3/: async_allreduce_demo.py  numba_test.py
src/section3/s0/: description.md  moe.py
